<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.thisptr.jackson.jq.v2</groupId>
	<artifactId>jackson-jq-parent</artifactId>
	<packaging>pom</packaging>
	<version>2.0.0-SNAPSHOT</version>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>jq for Jackson JSON Processor</description>
	<url>https://github.com/eiiches/jackson-jq</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Eiichi Sato</name>
			<email>sato.eiichi@gmail.com</email>
			<organizationUrl>https://github.com/eiiches</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:eiiches/jackson-jq.git</connection>
		<developerConnection>scm:git:git@github.com:eiiches/jackson-jq.git</developerConnection>
		<url>git@github.com:eiiches/jackson-jq.git</url>
		<tag>HEAD</tag>
	</scm>

	<modules>
		<module>jackson-jq-json-provider</module>
		<module>jackson-jq-json-provider-impl-jackson2</module>
		<module>jackson-jq-json-provider-impl-jackson3</module>
		<module>jackson-jq-json-provider-impl-gson</module>
		<module>jackson-jq-spi</module>
		<module>jackson-jq-core</module>
		<module>jackson-jq-regex-impl-joni</module>
		<module>jackson-jq-tests</module>
		<module>jackson-jq-tests-jackson2</module>
		<module>jackson-jq-tests-jackson3</module>
		<module>jackson-jq-tests-gson</module>
		<module>jackson-jq-ext-module-uuid</module>
		<module>jackson-jq-ext-module-time</module>
		<module>jackson-jq-ext-module-uri</module>
		<module>jackson-jq-ext-module-random</module>
		<module>jackson-jq-cli</module>
	</modules>

	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<url>https://central.sonatype.com/repository/maven-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<org.slf4j-version>2.0.18</org.slf4j-version>
		<com.google.auto.service-version>1.1.1</com.google.auto.service-version>
		<com.google.errorprone-version>2.50.0</com.google.errorprone-version>
		<com.uber.nullaway-version>0.13.8</com.uber.nullaway-version>
		<org.jspecify-version>1.0.0</org.jspecify-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>2.22.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>tools.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>3.2.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>6.1.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.27.7</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${org.slf4j-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.auto.service</groupId>
			<artifactId>auto-service-annotations</artifactId>
			<version>${com.google.auto.service-version}</version>
			<optional>true</optional> <!-- unnecessary for runtime -->
		</dependency>
		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>${org.jspecify-version}</version>
			<optional>true</optional> <!-- unnecessary for runtime -->
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>error_prone_annotations</artifactId>
			<version>${com.google.errorprone-version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>${maven.multiModuleProjectDirectory}/build-tools/checkstyle/checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<excludes>module-info.java</excludes>
					<failOnViolation>true</failOnViolation>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
				</configuration>
				<executions>
					<execution>
						<id>checkstyle</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>8</release>
					<compilerArgument>-Xlint:all,-processing,-options</compilerArgument>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.auto.service</groupId>
							<artifactId>auto-service</artifactId>
							<version>${com.google.auto.service-version}</version>
						</path>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>${com.google.errorprone-version}</version>
						</path>
						<path>
							<groupId>com.uber.nullaway</groupId>
							<artifactId>nullaway</artifactId>
							<version>${com.uber.nullaway-version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Import-Package>org.jspecify.annotations;resolution:=optional,*</Import-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>[21,)</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.11.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>6.0.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.13</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M16</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>javacc-maven-plugin</artifactId>
					<version>3.1.1</version>
					<dependencies>
						<dependency>
							<groupId>net.java.dev.javacc</groupId>
							<artifactId>javacc</artifactId>
							<version>7.0.13</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.sonatype.central</groupId>
					<artifactId>central-publishing-maven-plugin</artifactId>
					<version>0.8.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.2.8</version>
				</plugin>
				<plugin>
					<groupId>org.jboss.jandex</groupId>
					<artifactId>jandex-maven-plugin</artifactId>
					<version>1.2.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>error-prone</id>
			<activation>
				<jdk>[21,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<executions>
							<execution>
								<id>default-compile</id>
								<configuration>
									<fork>true</fork>
									<compilerArgs>
										<arg>-XDcompilePolicy=simple</arg>
										<arg>--should-stop=ifError=FLOW</arg>
										<arg>-Xplugin:ErrorProne -Xep:Var:ERROR -Xep:UnnecessaryFinal:ERROR -Xep:DefaultCharset:ERROR -Xep:DeprecatedVariable:ERROR -Xep:EmptyCatch:ERROR -Xep:FallThrough:ERROR -Xep:ImmutableEnumChecker:ERROR -Xep:IncorrectMainMethod:ERROR -Xep:InconsistentHashCode:ERROR -Xep:MissingOverride:ERROR -Xep:WildcardImport:ERROR -Xep:RemoveUnusedImports:ERROR -Xep:Finally:ERROR -Xep:BadInstanceof:ERROR -Xep:BadImport:ERROR -Xep:RedundantNullCheck:ERROR -XepExcludedPaths:.*/generated-sources/.* -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=net.thisptr.jackson.jq -XepOpt:NullAway:TreatGeneratedAsUnannotated=true -Xep:VoidMissingNullable:ERROR -Xep:ReturnMissingNullable:ERROR -Xep:ParameterMissingNullable:ERROR -Xep:FieldMissingNullable:ERROR -Xep:EqualsMissingNullable:ERROR -Xep:NullableConstructor:ERROR -Xep:NullablePrimitive:ERROR -Xep:NullablePrimitiveArray:ERROR -Xep:NullableOnContainingClass:ERROR</arg>
										<arg>-XDaddTypeAnnotationsToSymbol=true</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
										<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
										<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
									</compilerArgs>
								</configuration>
							</execution>
							<execution>
								<id>default-testCompile</id>
								<configuration>
									<fork>true</fork>
									<compilerArgs>
										<arg>-XDcompilePolicy=simple</arg>
										<arg>--should-stop=ifError=FLOW</arg>
										<arg>-Xplugin:ErrorProne -Xep:Var:ERROR -Xep:UnnecessaryFinal:ERROR -Xep:DefaultCharset:ERROR -Xep:DeprecatedVariable:ERROR -Xep:EmptyCatch:ERROR -Xep:FallThrough:ERROR -Xep:ImmutableEnumChecker:ERROR -Xep:IncorrectMainMethod:ERROR -Xep:InconsistentHashCode:ERROR -Xep:MissingOverride:ERROR -Xep:WildcardImport:ERROR -Xep:RemoveUnusedImports:ERROR -Xep:Finally:ERROR -Xep:BadInstanceof:ERROR -Xep:BadImport:ERROR -Xep:RedundantNullCheck:ERROR -XepExcludedPaths:.*/generated-sources/.* -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=net.thisptr.jackson.jq -XepOpt:NullAway:TreatGeneratedAsUnannotated=true -Xep:VoidMissingNullable:ERROR -Xep:ReturnMissingNullable:ERROR -Xep:ParameterMissingNullable:ERROR -Xep:FieldMissingNullable:ERROR -Xep:EqualsMissingNullable:ERROR -Xep:NullableConstructor:ERROR -Xep:NullablePrimitive:ERROR -Xep:NullablePrimitiveArray:ERROR -Xep:NullableOnContainingClass:ERROR</arg>
										<arg>-XDaddTypeAnnotationsToSymbol=true</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
										<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
										<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
										<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
									</compilerArgs>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>false</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
